--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
-    <meta name="description" content="A new Flutter project." />
+    <meta name="description" content="App to write down your day" />
 
     <meta
       name="google-signin-client_id"
@@ -28,13 +28,13 @@
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="my_journal" />
+    <meta name="apple-mobile-web-app-title" content="MyJournal" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>my_journal</title>
+    <title>MyJournal</title>
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
